[gd_scene load_steps=7 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 35
use_mipmaps = true
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="LoonyLips" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Blackboard" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1080.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true

[node name="StoryText" type="RichTextLabel" parent="Blackboard" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1078.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Text"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Text"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_colors" ]

[node name="TextBox" type="LineEdit" parent="Blackboard" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 650.0
margin_right = 950.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "TextBox"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="TextureButton" type="TextureButton" parent="Blackboard" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 960.0
margin_top = 650.0
margin_right = 1010.0
margin_bottom = 699.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="ButtonLabel" type="RichTextLabel" parent="Blackboard/TextureButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 140.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "OK"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_fonts" ]

[connection signal="text_entered" from="Blackboard/TextBox" to="." method="_on_TextBox_text_entered"]

[connection signal="pressed" from="Blackboard/TextureButton" to="." method="_on_TextureButton_pressed"]


